classify (0.0.1-5) diablo; urgency=low

  * debian/rules: use a dedicated build directory
  * 

 -- Sven Herzberg <sven@imendio.com>  Sun, 01 Feb 2009 12:58:11 +0100

classify (0.0.1-4) diablo; urgency=low

  * debian/control: depend on hildon-application-manager for the attached
    change
  * debian/postinst: added a postinst script for the user to let him choose
    the location for the menu entry

 -- Sven Herzberg <herzi@gnome-de.org>  Thu, 29 Jan 2009 20:03:46 +0100

classify (0.0.1-3) diablo; urgency=low

  * debian/changelog: changed distribution to diablo
  * debian/control: changed section to "user/utilities" according to
    http://wiki.maemo.org/Task:Package_categories#New_list_for_Diablo;
    include libhildon1-dev in the build dependencies; moved the library
    into the "libs" section; added some comments for the libclassify0-dev
    handling
  * debian/rules: get the documentation installation properly done with the
    public Maemo 4.1.2 SDK

 -- Sven Herzberg <sven@imendio.com>  Thu, 29 Jan 2009 15:58:05 +0100

classify (0.0.1-2) diablo; urgency=low

  * debian/changelog: Updated to fix the lintian warnings (this update is
    needed for new-package-should-close-itp-bug)
  * debian/classify.dirs: don't include empty /usr/sbin
  * debian/classify.install: remove the libraries
  * debian/libclassify0.install: added the library to a dedicated package
  * debian/control: updated build dependencies for the man page; added the
    library package
  * debian/rules: drop the dbg package stuff (I plan to use pkg-create-dbgsym
    for this); added copyright and README to the library package; build the
    manpage; create a symlink from /usr/share/doc/classify to
    /usr/share/doc/libclassify0; so we install the documentation only once

 -- Sven Herzberg <sven@imendio.com>  Tue, 27 Jan 2009 15:57:11 +0100

classify (0.0.1-1) unstable; urgency=low

  * Initial release: now we can start being happy all over...
