@@ -1,1 +1,2 @@
 usr/bin
+usr/lib/classify-0.0
