@@ -1,0 +1,18 @@
+This package was debianized by Sven Herzberg <herzi@gnome-de.org> on
+Wed, 21 Jan 2009 19:27:47 +0100.
+
+It was downloaded from the secret code repository
+
+Upstream Author: Sven Herzberg <herzi@gnome-de.org>
+
+Copyright: 2007,2009  Sven Herzberg <herzi@gnome-de.org>
+
+License:
+
+Classify is licensed under the terms of the LGPL 2.1+
+
+
+The Debian packaging is (C) 2009, Sven Herzberg <herzi@gnome-de.org> and
+is licensed under the LGPL, see `/usr/share/common-licenses/LGPL'.
+
+
