@@ -1,0 +1,3 @@
+debian/copyright
+NEWS
+README
